security: harden path/process handling and lockout persistence